# habitus

./: .gitignore  AGENTS.md  LICENSE  README.md
git/: config
nvim/: README.md  lazy-lock.json
nvim/lua/: community.lua
nvim/lua/plugins/: astrocore.lua  astrolsp.lua  catppuccin.lua  git-blame.lua  grug-far.lua  gruvbox.lua  markdown-preview.lua  mason.lua  neon-ghost.lua
setup/: disable-capslock.sh  install-ghostty.sh  install-rpi-imager.sh
shell/: init.sh  install.sh
shell/install.d/: 10-rc.sh  20-bin.sh  30-vim.sh  40-nvim.sh  50-git.sh  60-tmux.sh  _lib.sh
shell/python/: pyproject.toml
shell/topics/: aliases.sh  apt.sh  docker.sh  functions.sh  git.sh  navigation.sh  neovim.sh  process.sh  python.sh  ssh.sh  vim.sh
tmux/: tmux.conf
vim/: vimrc
