[project]
name = "mgmt-default-env"
version = "0.0.0"
description = "Default Python environment managed by shell/topics/python.sh"
requires-python = ">=3.12"
dependencies = [
    "drake>=1.51.1",
    "duckdb>=1.5.1",
    "marimo>=0.23.1",
    "numpy>=2.4",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "plotly>=6.7",
    "polars>=1.39.3",
    "pydantic-ai-slim>=1.80.0",
    "ruff>=0.15.10",
    "scipy>=1.17",
    "tiktoken>=0.12.0",
]

# Torch as mutually-exclusive extras: `duvsync` in shell/topics/python.sh
# picks `--extra cpu` or `--extra cu128` based on whether an NVIDIA GPU
# is present on the host, so the same pyproject works across machines.
[project.optional-dependencies]
cpu = [
    "torch>=2.5",
]
cu128 = [
    "torch>=2.5",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
